spring-rest-template.yaml
kind: Template
apiVersion: v1
metadata:
  name: my-template
objects:
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/slibonati/spring-rest
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2021-02-01T22:11:37Z"
    labels:
      app: spring-rest
      app.kubernetes.io/component: spring-rest
      app.kubernetes.io/instance: spring-rest
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-rest-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "11"
    name: spring-rest
    namespace: spring-rest
    resourceVersion: "529210398"
    selfLink: /apis/build.openshift.io/v1/namespaces/spring-rest/buildconfigs/spring-rest
    uid: 462e3395-368c-4f27-bd11-fe98dc22f474
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: spring-rest:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      contextDir: /
      git:
        uri: https://github.com/slibonati/spring-rest
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: java:11
          namespace: openshift
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
    - generic:
        secretReference:
          name: spring-rest-generic-webhook-secret
      type: Generic
    - github:
        secretReference:
          name: spring-rest-github-webhook-secret
      type: GitHub
    - imageChange:
        lastTriggeredImageID: image-registry.openshift-image-registry.svc:5000/openshift/java@sha256:4dc1ae6af9a3efbbd28c1b765faa6fcea3f8eddccd2347ad97713d312f57b511
      type: ImageChange
    - type: ConfigChange
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      alpha.image.policy.openshift.io/resolve-names: '*'
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/slibonati/spring-rest
      deployment.kubernetes.io/revision: "3"
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"spring-rest:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"spring-rest\")].image","pause":"false"}]'
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2021-02-01T22:11:37Z"
    generation: 3
    labels:
      app: spring-rest
      app.kubernetes.io/component: spring-rest
      app.kubernetes.io/instance: spring-rest
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-rest-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "11"
    name: spring-rest
    namespace: spring-rest
    resourceVersion: "529213534"
    selfLink: /apis/apps/v1/namespaces/spring-rest/deployments/spring-rest
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: spring-rest
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: spring-rest
          deploymentconfig: spring-rest
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/spring-rest/spring-rest@sha256:3dbe9ecc872ccfeb97562dbe7f71ac26998ecf677c1851cfde9f2b99b6b5568d
          imagePullPolicy: Always
          name: spring-rest
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/slibonati/spring-rest
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2021-02-01T22:11:37Z"
    labels:
      app: spring-rest
      app.kubernetes.io/component: spring-rest
      app.kubernetes.io/instance: spring-rest
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-rest-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "11"
    name: spring-rest
    namespace: spring-rest
    resourceVersion: "529189513"
    selfLink: /api/v1/namespaces/spring-rest/services/spring-rest
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: spring-rest
      deploymentconfig: spring-rest
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2021-02-01T22:11:37Z"
    labels:
      app: spring-rest
      app.kubernetes.io/component: spring-rest
      app.kubernetes.io/instance: spring-rest
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-rest-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "11"
    name: spring-rest
    namespace: spring-rest
    resourceVersion: "529208694"
    selfLink: /apis/route.openshift.io/v1/namespaces/spring-rest/routes/spring-rest
  spec:
    host: spring-rest-spring-rest.apps.shared-na4.na4.openshift.opentlc.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: spring-rest
      weight: 100
    wildcardPolicy: None
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/slibonati/spring-rest
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2021-02-01T22:11:37Z"
    generation: 1
    labels:
      app: spring-rest
      app.kubernetes.io/component: spring-rest
      app.kubernetes.io/instance: spring-rest
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-rest-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "11"
    name: spring-rest
    namespace: spring-rest
    resourceVersion: "529213297"
    selfLink: /apis/image.openshift.io/v1/namespaces/spring-rest/imagestreams/spring-rest
  spec:
    lookupPolicy:
      local: false
